# keyinput

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  project-config.toml  rust-toolchain.toml
.agent/: README.md  decisions.md  execution-plan.md  state.md  tasks.md
.agent/notes/: shared-core-options.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/android/: README.md  build.gradle.kts  settings.gradle.kts
apps/harmony/: README.md
apps/ios/: README.md
core/: README.md
core/vault-core/: Cargo.toml
core/vault-core/src/: codec.rs  crypto.rs  entry.rs  error.rs  ffi.rs  generator.rs  imex.rs  lib.rs  lock.rs  repository.rs  rng.rs  secret.rs  totp.rs  vault.rs
docs/: README.md  inspiration.md
docs/implementation/: README.md  biometric-unlock.md  clipboard-fallback.md  cloud-sync.md  cross-device-migration.md  encrypted-export-import.md  entry-field-model.md  master-password-unlock.md  password-generator.md  secure-keyboard-ime.md  totp-generation.md  vault-crypto-core.md
docs/product/: information-architecture.md  interaction-design.md  platform-capability-design.md  product-decision-record.md  product-design.md  product-requirements.md  roadmap.md  v0.1-prototype-plan.md  v0.2-mvp-plan.md  v0.3-migration-plan.md  v1.0-release-plan.md  v1.1-cloud-sync-plan.md  version-plan.md
docs/technical/: architecture.md  (+7 more)
tools/: README.md
(+37 files in other folders)
